# infra-insight-mvp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  jira_issues_import.csv
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_remediation_actions.py
apps/api/app/: main.py
apps/api/app/core/: config.py  db.py  logging.py
apps/api/app/models/: finding.py  jira.py  k8s.py  remediation_action.py  service.py
apps/api/app/routers/: actions.py  findings.py  health.py  reports.py  services.py  sources.py
apps/web/: Dockerfile  next.config.js  package.json
apps/web/src/app/: layout.tsx  page.tsx  trends.tsx
apps/web/src/app/actions/: page.tsx
apps/web/src/app/findings/: page.tsx
apps/web/src/app/findings/[id]/: page.tsx
apps/web/src/components/: ActionsList.tsx
apps/web/src/lib/: api.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/worker/: celery_app.py  cli.py  db_models.py
apps/worker/worker/connectors/: jira.py  k8s.py
apps/worker/worker/core/: config.py  db.py
apps/worker/worker/detectors/: backlog_aging.py  base.py  crashloop_restarts.py
apps/worker/worker/executors/: __init__.py
apps/worker/worker/tasks/: execute_actions.py  ingest_jira.py  ingest_k8s.py  run_detectors.py
charts/infra-insight/: Chart.yaml  values.yaml
scripts/: bootstrap_db.sh
